# thttp

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: main.rs
static/: index.html  readme.html
static/js/: main.js
