[package]
name = "thttp"
version = "0.1.0"
authors = ["davidedelpapa <davidedelpapa@yahoo.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["http", "server", "actix"]
categories = ["command-line-utilities", "development-tools", "web-programming::http-server"]
description = "A minimalist static webserver written in Rust + Actix"
readme = "README.md"
repository = "https://github.com/davidedelpapa/thttp"
homepage = "https://github.com/davidedelpapa/thttp"

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "0.2.1"
listenfd = "0.3.3"
structopt = "0.3"
regex = "1"